--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -19,15 +19,19 @@
             Visão geral do programa
           </h2>
           <p>
-            Pelo programa <strong>Lar Global da AIESEC</strong> você pode viver uma experiência de aprendizado multicultural ao se <strong>voluntariar para receber um intercambista por 6 a 12 semanas</strong>.<br/><br/>
+            Pelo programa <strong>Lar Global da AIESEC</strong> você pode viver uma experiência de aprendizado
+            multicultural ao se <strong>voluntariar para receber um intercambista por 6 a 12
+              semanas</strong>.<br /><br />
 
-É sua chance de <strong>colocar em prática uma língua estrangeira</strong>, viver novas experiências e <strong>trocas culturais</strong>, criar <strong>conexões internacionais</strong> e, principalmente, <strong>viver a diversidade</strong>!<br/><br/>
+            É sua chance de <strong>colocar em prática uma língua estrangeira</strong>, viver novas experiências e
+            <strong>trocas culturais</strong>, criar <strong>conexões internacionais</strong> e, principalmente,
+            <strong>viver a diversidade</strong>!<br /><br />
 
-Confira no vídeo o relato de um de nossos participantes!
+            Confira no vídeo o relato de um de nossos participantes!
         </div>
         <div class="col-lg-5 col-sm-12 col-md-12 margin-top-and-bottom-host">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/80D5Gra4QSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/80D5Gra4QSc" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -47,19 +51,25 @@ Confira no vídeo o relato de um de nossos participantes!
             <div class="col-sm-12">
               <div class="list-icon"><i class="far fa-check-circle"></i></div>
               <p class='lighter'>
-                <strong>Trocas culturais</strong> - da culinária, música e dança até os hábitos mais pequenos, conviver com alguém de outro país certamente nos proporciona um dialogo multicultural incrivel! Escolha se conectar com o mundo!
+                <strong>Trocas culturais</strong> - da culinária, música e dança até os hábitos mais pequenos, conviver
+                com alguém de outro país certamente nos proporciona um dialogo multicultural incrivel! Escolha se
+                conectar com o mundo!
               </p>
             </div>
             <div class="col-sm-12">
               <div class="list-icon"><i class="far fa-check-circle"></i></div>
               <p class='lighter'>
-                <strong>Novas experiências</strong> - A gente bem sabe que a rotina pode cansar às vezes não é mesmo? Agora imagina fazer o que você faz todos os dias com uma nova pessoa ao seu lado! Revolucione a sua rotina com a vivência surpreendente de receber um estrangeiro na sua casa.
+                <strong>Novas experiências</strong> - A gente bem sabe que a rotina pode cansar às vezes não é mesmo?
+                Agora imagina fazer o que você faz todos os dias com uma nova pessoa ao seu lado! Revolucione a sua
+                rotina com a vivência surpreendente de receber um estrangeiro na sua casa.
               </p>
             </div>
             <div class="col-sm-12">
               <div class="list-icon"><i class="far fa-check-circle"></i></div>
               <p class='lighter'>
-                <strong>Aprender uma nova lingua na prática</strong> - Sempre quis aprender uma nova lingua mas não tem tempo, dinheiro, ou cabeça para um curso formal? Estudos dizem que aprender um novo idioma no dia-a-dia é a melhor forma para exercitar o conhecimento e ativar as conexões cerebrais
+                <strong>Aprender uma nova lingua na prática</strong> - Sempre quis aprender uma nova lingua mas não tem
+                tempo, dinheiro, ou cabeça para um curso formal? Estudos dizem que aprender um novo idioma no dia-a-dia
+                é a melhor forma para exercitar o conhecimento e ativar as conexões cerebrais
               </p>
             </div>
             <div class="col-sm-12">
@@ -121,7 +131,12 @@ Confira no vídeo o relato de um de nossos participantes!
                 O que é pré-requisito para participar? Preciso falar inglês?
               </h3>
               <p class='lighter italic justify'>
-                <strong>Não precisa falar inglês!</strong> A experiência de é, entre outras coisas, sobre a vivência prática de uma nova língua e essa pode ser uma excelente oportunidade para aprender. Para hospedar um intercambista, você só precisa ter <strong>disponibilidade para hospedar de 6-12 semanas</strong>, um <strong>local para o intercambista dormir</strong> (que não precisa ser um quarto individual!), prover <strong>acesso às áreas comuns da casa</strong> e <strong>uso de água e luz</strong> sem custos adicionais para o intercambista. 
+                <strong>Não precisa falar inglês!</strong> A experiência de é, entre outras coisas, sobre a vivência
+                prática de uma nova língua e essa pode ser uma excelente oportunidade para aprender. Para hospedar um
+                intercambista, você só precisa ter <strong>disponibilidade para hospedar de 6-12 semanas</strong>, um
+                <strong>local para o intercambista dormir</strong> (que não precisa ser um quarto individual!), prover
+                <strong>acesso às áreas comuns da casa</strong> e <strong>uso de água e luz</strong> sem custos
+                adicionais para o intercambista.
               </p>
             </div>
             <div class="col-sm-12">
@@ -129,7 +144,12 @@ Confira no vídeo o relato de um de nossos participantes!
                 Como é o suporte da AIESEC para o Host? A AIESEC paga alguma coisa?
               </h3>
               <p class='lighter italic justify'>
-                <strong>Não há nenhum custo ou recompensa pela hospedagem, o objetivo é receber um intercambista voluntariamente.</strong> A AIESEC  irá te encontrar e apresentar o intercambista, bem como  acompanhar semanalmente durante a experiência para saber como estão as coisas e prestar auxílio no que for necessário. Além disso, é responsabilidade da AIESEC prover um espaço de indução e contato para tirar todas as suas dúvidas antes da chegada do intercambista. <strong>Estamos sempre à disposição e abertos para ajudar!</strong>
+                <strong>Não há nenhum custo ou recompensa pela hospedagem, o objetivo é receber um intercambista
+                  voluntariamente.</strong> A AIESEC irá te encontrar e apresentar o intercambista, bem como acompanhar
+                semanalmente durante a experiência para saber como estão as coisas e prestar auxílio no que for
+                necessário. Além disso, é responsabilidade da AIESEC prover um espaço de indução e contato para tirar
+                todas as suas dúvidas antes da chegada do intercambista. <strong>Estamos sempre à disposição e abertos
+                  para ajudar!</strong>
               </p>
             </div>
             <div class="col-sm-12">
@@ -137,7 +157,10 @@ Confira no vídeo o relato de um de nossos participantes!
                 Quem são os intercambistas que viajam pela AIESEC?
               </h3>
               <p class='lighter italic justify'>
-                São <strong>jovens de 18 a 30 anos que buscam desenvolver liderança através de intercâmbios transculturais providos pela organização.</strong> Os intercambistas que vem para cá costumam vir de diferentes países, principalmente da América Latina e Europa, e estão engajados de forma voluntária em projetos de impacto social e profissional em 43 cidades do Brasil.
+                São <strong>jovens de 18 a 30 anos que buscam desenvolver liderança através de intercâmbios
+                  transculturais providos pela organização.</strong> Os intercambistas que vem para cá costumam vir de
+                diferentes países, principalmente da América Latina e Europa, e estão engajados de forma voluntária em
+                projetos de impacto social e profissional em 43 cidades do Brasil.
               </p>
             </div>
           </div>
@@ -171,7 +194,8 @@ Confira no vídeo o relato de um de nossos participantes!
                 Contato
               </h3>
               <p class="lighter ">
-                Após a sua inscrição, analisaremos as informações sobre o alojamento que você fornecerá e entraremos em contato com você.
+                Após a sua inscrição, analisaremos as informações sobre o alojamento que você fornecerá e entraremos em
+                contato com você.
               </p>
             </div>
           </div>
@@ -184,7 +208,8 @@ Confira no vídeo o relato de um de nossos participantes!
                 Recepção
               </h3>
               <p class="lighter ">
-                Assim que o jovem for designado para a sua família, iremos informá-lo para que você possa o acompanhar para lhe dar as boas
+                Assim que o jovem for designado para a sua família, iremos informá-lo para que você possa o acompanhar
+                para lhe dar as boas
                 vindas.
               </p>
             </div>
@@ -204,7 +229,8 @@ Confira no vídeo o relato de um de nossos participantes!
           </div>
           <div class='row'>
             <div class='col-12'>
-              <button (click)='redirectToForm()' class="border-radius centered without-border with-background default">
+              <button (click)='redirectToForm()' (click)="goToInscreva()"
+                class="border-radius centered without-border with-background default">
                 Inscreva-se já
               </button>
             </div>
