--- a/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
+++ b/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
@@ -28,7 +28,8 @@
 												<div class="col-md-12 col-sm-12">
 													<h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
 													<i class="fas fa-thumbs-up fa-10x color-icon"></i>
-													<button type='button' (click)='redirectToHome()' class='btn btn-light'> Retornar à página principal </button>
+													<button (click)='redirectToHome()' type='button' class='btn btn-light'> Retornar à página
+														principal </button>
 												</div>
 											</div>
 										</div>
