--- a/src/app/landing-page-countries/landing-page-countries.component.html
+++ b/src/app/landing-page-countries/landing-page-countries.component.html
@@ -7,45 +7,55 @@
         </h1>
       </div>
     </div>
-    <div class='row'  id='content-wrapper'  [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global' }">
-        <div class='col-lg-3'>
-          <ul>
-            <li *ngFor='let country of countries' class='li-country' [ngClass]="{'active': country.active, 'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global' }">
-              <div class="max-width-and-height" (click)='selectCountry(country)'>
-                <img src='{{ country.flag }}'>
-                <label>{{ country.name }}</label>
-              </div>
-              <div *ngIf='country.active' class=' animated faster fadeIn mobile'>
-                <div class='col-12'>
-                  <div (click)='selectCountry(country)'>
-                    <div class='country-image'>
-                      <img class='country-image-value' src='{{country.image}}'>
-                    </div>
-                    <p class='description'>
-                      "{{ country.description }}"
-                    </p>
+    <div class='row' id='content-wrapper'
+      [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global' }">
+      <div class='col-lg-3'>
+        <ul>
+          <li *ngFor='let country of countries' class='li-country'
+            [ngClass]="{'active': country.active, 'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global' }">
+            <div class="max-width-and-height" (click)='selectCountry(country)'>
+              <img src='{{ country.flag }}'>
+              <label>{{ country.name }}</label>
+            </div>
+            <div *ngIf='country.active' class=' animated faster fadeIn mobile'>
+              <div class='col-12'>
+                <div (click)='selectCountry(country)'>
+                  <div class='country-image'>
+                    <img class='country-image-value' src='{{country.image}}'>
                   </div>
-                  <a href='{{country.link}}' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" *ngIf="actualPage != 'talento-global'" target='_blank'> Ver oportunidades </a>
-                  <a [ngx-scroll-to]="'#form'" [ngx-scroll-to-offset]="-60" [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" *ngIf="actualPage == 'talento-global'"> Ver oportunidades </a>
+                  <p class='description'>
+                    "{{ country.description }}"
+                  </p>
                 </div>
+                <a href='{{country.link}}'
+                  [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge':       actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}"
+                  *ngIf="actualPage != 'talento-global'" target='_blank'> Ver oportunidades </a>
+                <a [ngx-scroll-to]="'#form'" [ngx-scroll-to-offset]="-60"
+                  [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}"
+                  *ngIf="actualPage == 'talento-global'"> Ver oportunidades </a>
               </div>
-            </li>
-          </ul>
-        </div>
-        <div class='col-lg-9 desktop'>
-          <div class='row'>
-            <div class='col-lg-12'>
-              <div class='country-image' [ngStyle]="{'background-image':'url(' + country.image + ')'}"></div>
             </div>
-            <div class='col-lg-12'>
-              <p class='description'>
-                "{{ country.description }}" 
-              </p>
-              <a href='{{country.link}}' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" *ngIf="actualPage != 'talento-global'" target='_blank'> Ver oportunidades </a>
-              <a [ngx-scroll-to]="'#form'" [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" *ngIf="actualPage == 'talento-global'"> Ver oportunidades </a>
-            </div>
+          </li>
+        </ul>
+      </div>
+      <div class='col-lg-9 desktop'>
+        <div class='row'>
+          <div class='col-lg-12'>
+            <div class='country-image' [ngStyle]="{'background-image':'url(' + country.image + ')'}"></div>
+          </div>
+          <div class='col-lg-12'>
+            <p class='description'>
+              "{{ country.description }}"
+            </p>
+            <a href='{{country.link}}'
+              [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}"
+              *ngIf="actualPage != 'talento-global'" target='_blank'> Ver oportunidades </a>
+            <a [ngx-scroll-to]="'#form'"
+              [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}"
+              *ngIf="actualPage == 'talento-global'"> Ver oportunidades </a>
           </div>
         </div>
       </div>
+    </div>
   </div>
 </section>
