--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -14,8 +14,10 @@
             Visão geral do programa
           </h2>
           <p>
-            O Empreendedor Global é uma experiência de imersão em Startup durante 6 a 12 semanas em que o jovem tem a chance de viver
-            o ambiente dinâmico e inovador de uma Startup. As áreas de atuação são Marketing, Administração, T.I., Design
+            O Empreendedor Global é uma experiência de imersão em Startup durante 6 a 12 semanas em que o jovem tem a
+            chance de viver
+            o ambiente dinâmico e inovador de uma Startup. As áreas de atuação são Marketing, Administração, T.I.,
+            Design
             e Desenvolvimento de Negócios! O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia
             profissional ou acadêmica na área de atuação de preferência.
         </div>
@@ -30,8 +32,10 @@
 
   <section class="product-steps">
     <header>
-      <div class='banner' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
-        <div class='circle' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
+      <div class='banner'
+        [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
+        <div class='circle'
+          [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
           <i class="fas fa-walking"></i>
         </div>
       </div>
@@ -83,7 +87,8 @@
                 Fazer o CV em inglês
               </h3>
               <p class="lighter">
-                É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos
+                É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando.
+                Não se preocupe, estamos
                 aqui para te ajudar!
               </p>
             </div>
@@ -97,7 +102,8 @@
                 Aplique em nossas vagas
               </h3>
               <p class="lighter">
-                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
+                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria
+                feita com seu escritório
                 da AIESEC.
               </p>
             </div>
@@ -111,7 +117,8 @@
                 Entrevistas para vagas que for selecionado
               </h3>
               <p class="lighter">
-                Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se apresentar, responder algumas perguntas
+                Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se apresentar,
+                responder algumas perguntas
                 e tirar dúvidas.
               </p>
             </div>
@@ -125,7 +132,8 @@
                 Ser aprovado na vaga
               </h3>
               <p class="lighter">
-                Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
+                Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito,
+                mediante o pagamento
                 de uma taxa administrativa.
               </p>
             </div>
@@ -158,7 +166,8 @@
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="with-background bold ge without-border centered">
+              <button (click)="goToInscreva()" [ngx-scroll-to]="'#form'"
+                class="with-background bold ge without-border centered">
                 Inscreva-se já
               </button>
             </div>
@@ -180,7 +189,8 @@
                 Vou receber salário para trabalhar na Startup?
               </h3>
               <p class='lighter italic'>
-                Não, a experiência não é remunerada para este tipo de intercâmbio. Mas em compensação, você irá receber acomodação pelo período
+                Não, a experiência não é remunerada para este tipo de intercâmbio. Mas em compensação, você irá receber
+                acomodação pelo período
                 do intercâmbio.
               </p>
             </div>
@@ -197,8 +207,10 @@
                 Preciso de seguro saúde para viajar?
               </h3>
               <p class='lighter italic'>
-                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
-                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante
+                toda a viagem. Nós
+                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que
+                você
                 preferir.
               </p>
             </div>
@@ -207,11 +219,13 @@
                 Qual o tipo de acomodação que irei ficar?
               </h3>
               <p class='lighter italic'>
-                Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou apartamento com outros intercambistas!
+                Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou
+                apartamento com outros intercambistas!
               </p>
             </div>
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white ge">
+              <button (click)="goToFlConosco()" [ngx-scroll-to]="'#form'"
+                class="centered without-border bold background-white ge">
                 Fale conosco
               </button>
             </div>
@@ -239,7 +253,8 @@
                 Auxílio para achar sua vaga
               </h3>
               <p class="lighter">
-                Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
+                Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar
+                todas suas dúvidas
                 e vai te colocar em contato com o escritório para onde você vai viajar.
               </p>
             </div>
@@ -253,7 +268,8 @@
                 Apoio logístico
               </h3>
               <p class="lighter">
-                Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
+                Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística
+                de transporte, acomodação
                 e preparo para o seu projeto.
               </p>
             </div>
@@ -267,7 +283,8 @@
                 Descrição de trabalho
               </h3>
               <p class="lighter">
-                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
+                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai
+                participar, carga horária
                 e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
                 dúvida.
               </p>
@@ -282,7 +299,8 @@
                 Experiência de Liderança
               </h3>
               <p class="lighter">
-                Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
+                Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e
+                aprimorar as habilidades
                 desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
               </p>
             </div>
@@ -291,7 +309,8 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default">
+          <button (click)="goToFlRepre()" [ngx-scroll-to]="'#form'"
+            class="border-radius centered without-border with-background default">
             Fale com um dos nossos representantes
           </button>
         </div>
