--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -14,9 +14,12 @@
             Visão geral do programa
           </h2>
           <p>
-            O Voluntário Global é uma experiência voluntária em ONGs, Escolas ou Fundações em diversos países. Todos os projetos são
-            vinculados aos Objetivos de Desenvolvimento Sustentável das Nações Unidas e possuem grande potencial de impacto
-            no mundo. Os projetos tem duração de 6 a 8 semanas e ter entre 18 e 30 anos é o único requisito para deixar sua
+            O Voluntário Global é uma experiência voluntária em ONGs, Escolas ou Fundações em diversos países. Todos os
+            projetos são
+            vinculados aos Objetivos de Desenvolvimento Sustentável das Nações Unidas e possuem grande potencial de
+            impacto
+            no mundo. Os projetos tem duração de 6 a 8 semanas e ter entre 18 e 30 anos é o único requisito para deixar
+            sua
             marca no mundo.
         </div>
       </div>
@@ -29,8 +32,10 @@
 
   <section class="product-steps">
     <header>
-      <div class='banner' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
-        <div class='circle' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
+      <div class='banner'
+        [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
+        <div class='circle'
+          [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
           <i class="fas fa-walking"></i>
         </div>
       </div>
@@ -95,7 +100,8 @@
                 Ser aprovado na vaga
               </h3>
               <p class="lighter">
-                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto, mediante o pagamento
+                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto,
+                mediante o pagamento
                 de uma taxa administrativa.
               </p>
             </div>
@@ -128,7 +134,8 @@
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="with-background bold gv without-border centered">
+              <button (click)="goToInscreva()" [ngx-scroll-to]="'#form'"
+                class="with-background bold gv without-border centered">
                 Inscreva-se já
               </button>
             </div>
@@ -158,8 +165,10 @@
                 Preciso de seguro saúde para viajar?
               </h3>
               <p class='lighter italic'>
-                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
-                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante
+                toda a viagem. Nós
+                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que
+                você
                 preferir.
               </p>
             </div>
@@ -168,11 +177,13 @@
                 Qual o tipo de acomodação que irei ficar?
               </h3>
               <p class='lighter italic'>
-                Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou apartamento com outros intercambistas!
+                Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou
+                apartamento com outros intercambistas!
               </p>
             </div>
             <div class="col-sm-12">
-              <button [ngx-scroll-to]="'#form'" class="centered without-border bold background-white gv">
+              <button (click)="goToFlConosco()" [ngx-scroll-to]="'#form'"
+                class="centered without-border bold background-white gv">
                 Fale conosco
               </button>
             </div>
@@ -200,7 +211,8 @@
                 Auxílio para achar sua vaga
               </h3>
               <p class="lighter">
-                Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
+                Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar
+                todas suas dúvidas
                 e vai te colocar em contato com o escritório para onde você vai viajar.
               </p>
             </div>
@@ -214,7 +226,8 @@
                 Apoio logístico
               </h3>
               <p class="lighter">
-                Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
+                Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística
+                de transporte, acomodação
                 e preparo para o seu projeto.
               </p>
             </div>
@@ -228,7 +241,8 @@
                 Descrição de trabalho
               </h3>
               <p class="lighter">
-                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
+                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai
+                participar, carga horária
                 e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
                 dúvida.
               </p>
@@ -243,7 +257,8 @@
                 Experiência de Liderança
               </h3>
               <p class="lighter">
-                Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
+                Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e
+                aprimorar as habilidades
                 desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
               </p>
             </div>
@@ -252,7 +267,8 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <button [ngx-scroll-to]="'#form'" class="border-radius centered without-border with-background default">
+          <button (click)="goToRepre()" [ngx-scroll-to]="'#form'"
+            class="border-radius centered without-border with-background default">
             Fale com um dos nossos representantes
           </button>
         </div>
