--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -36,13 +36,14 @@
         <div class="col-lg-4 col-sm-12 col-md-12">
           <div class="experience-earth"></div>
           <h3 class="centered experience-earth-header">
-            Ser parte de uma rede 
+            Ser parte de uma rede
             global
           </h3>
           <p class="centered">
-            Estar conectado com pessoas e  organizações de diversos países,  que compartilham da crença de  um mundo melhor!
+            Estar conectado com pessoas e organizações de diversos países, que compartilham da crença de um mundo
+            melhor!
           </p>
-        </div>        
+        </div>
       </div>
     </div>
   </section>
@@ -61,7 +62,7 @@
     <div class="col-lg-6 col-sm-8 col-md-8 job-description-info">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-width">
-            <i class="fas fa-briefcase"></i>
+          <i class="fas fa-briefcase"></i>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
@@ -71,7 +72,7 @@
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-width">
-            <i class="fas fa-bullhorn"></i>
+          <i class="fas fa-bullhorn"></i>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
@@ -81,7 +82,7 @@
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-width">
-            <i class="fas fa-users"></i>
+          <i class="fas fa-users"></i>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
@@ -91,7 +92,7 @@
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-width">
-            <i class="fas fa-sitemap"></i>
+          <i class="fas fa-sitemap"></i>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
@@ -101,7 +102,7 @@
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-width">
-            <i class="fas fa-plane"></i>
+          <i class="fas fa-plane"></i>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
@@ -111,7 +112,7 @@
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-width">
-            <i class="fas fa-money-bill"></i>
+          <i class="fas fa-money-bill"></i>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
@@ -129,9 +130,9 @@
       <br>
       <div class="row content-swipe-area">
         <div class="col-sm swipe-area">
-            <!-- sliderAnimation -->
-          <div class='swipe-animation' (mouseenter)="stopAnimation()" (mouseleave)="stopAnimation()" (swiperight)="swipe('right')"
-            (swipeleft)="swipe('left')"></div>
+          <!-- sliderAnimation -->
+          <div class='swipe-animation' (mouseenter)="stopAnimation()" (mouseleave)="stopAnimation()"
+            (swiperight)="swipe('right')" (swipeleft)="swipe('left')"></div>
           <div class="footer-carousel-btn-left">
             <i (click)="moveLeft()" class="fas fa-chevron-left"></i>
           </div>
@@ -144,9 +145,14 @@
                   <div class="col-6 desktop"></div>
                   <div class="col-6 brief">
                     <p>
-                      "Fui de uma menina assustada e metódica para alguém resiliente que sabe gerir tempo, pessoas e informações de formas criativas e eficientes porque todos dias vivo desafios que me desenvolvem de fato — <strong>e não existe nenhum desafio que não possa ser superado quando se é AIESEC</strong>" <br>
+                      "Fui de uma menina assustada e metódica para alguém resiliente que sabe gerir tempo, pessoas e
+                      informações de formas criativas e eficientes porque todos dias vivo desafios que me desenvolvem de
+                      fato — <strong>e não existe nenhum desafio que não possa ser superado quando se é AIESEC</strong>"
+                      <br>
                     </p>
-                    <span><p>Ariadne Alexandra - <strong>AIESEC no Insper</strong></p></span>
+                    <span>
+                      <p>Ariadne Alexandra - <strong>AIESEC no Insper</strong></p>
+                    </span>
                   </div>
                 </div>
               </div>
@@ -156,9 +162,13 @@
                 <div class="showcase-description row">
                   <div class="col-6 brief-left">
                     <p>
-                      "Minha comunicação e expressividade se mostram muito mais vivas, me ensinando a lidar com prazos, metas e objetivos. Estou aprendendo da melhor forma possível com as pessoas certas o que irei enfrentar numa <strong>futura carreira fora da organização</strong>"<br>
+                      "Minha comunicação e expressividade se mostram muito mais vivas, me ensinando a lidar com prazos,
+                      metas e objetivos. Estou aprendendo da melhor forma possível com as pessoas certas o que irei
+                      enfrentar numa <strong>futura carreira fora da organização</strong>"<br>
                     </p>
-                    <span><p>Denyson Morais - <strong>AIESEC em Belém</strong></p></span>
+                    <span>
+                      <p>Denyson Morais - <strong>AIESEC em Belém</strong></p>
+                    </span>
                   </div>
                   <div class="col-6 desktop"></div>
                 </div>
@@ -170,9 +180,14 @@
                   <div class="col-6 desktop"></div>
                   <div class="col-6 brief">
                     <p>
-                      "Quando eu penso em AIESEC, eu penso em ferramentas que proporcionam ondas de mudanças. Hoje vejo na AIESEC uma forma de fazer ainda mais, me unindo a milhares de pessoas que lutam todos os dias por um mundo melhor, como eu, e nos tornando assim uma <strong>onda de mudança sem limites</strong>"<br>
+                      "Quando eu penso em AIESEC, eu penso em ferramentas que proporcionam ondas de mudanças. Hoje vejo
+                      na AIESEC uma forma de fazer ainda mais, me unindo a milhares de pessoas que lutam todos os dias
+                      por um mundo melhor, como eu, e nos tornando assim uma <strong>onda de mudança sem
+                        limites</strong>"<br>
                     </p>
-                    <span><p>Carine Muller - <strong>AIESEC em Cuiabá</strong></p></span>
+                    <span>
+                      <p>Carine Muller - <strong>AIESEC em Cuiabá</strong></p>
+                    </span>
                   </div>
                 </div>
               </div>
@@ -182,9 +197,14 @@
                 <div class="showcase-description row">
                   <div class="col-6 brief-left">
                     <p>
-                      "A AIESEC me permitiu o contato com pessoas do mundo inteiro e, mais importante que isso, entender das realidades dos outros países e de como temos responsabilidade sobre elas. Por meio da AIESEC, me enxerguei como uma cidadã global ativa, que tem a oportunidade de participar ativamente nas mudanças e melhorias que podemos trazer pro mundo"<br>
+                      "A AIESEC me permitiu o contato com pessoas do mundo inteiro e, mais importante que isso, entender
+                      das realidades dos outros países e de como temos responsabilidade sobre elas. Por meio da AIESEC,
+                      me enxerguei como uma cidadã global ativa, que tem a oportunidade de participar ativamente nas
+                      mudanças e melhorias que podemos trazer pro mundo"<br>
                     </p>
-                    <span><p>Aline d'Avila - <strong>AIESEC em Natal</strong></p></span>
+                    <span>
+                      <p>Aline d'Avila - <strong>AIESEC em Natal</strong></p>
+                    </span>
                   </div>
                   <div class="col-6 desktop"></div>
                 </div>
@@ -208,8 +228,9 @@
   <section class="engage-session">
     <div class="col-6 adapt-height">
       <h1 class="italic align-left white-header">
-        Somos mais de <strong>40.000 membros</strong> <br> ao redor de mais de <strong>120 países</strong>! <br> Junte-se ao nosso time! <br>
-        <button type="button" class="btn btn-primary" (click)="scrollTo(formMembershipRef)">
+        Somos mais de <strong>40.000 membros</strong> <br> ao redor de mais de <strong>120 países</strong>! <br>
+        Junte-se ao nosso time! <br>
+        <button (click)="goToInscreva()" type="button" class="btn btn-primary" (click)="scrollTo(formMembershipRef)">
           Inscreva-se
         </button>
       </h1>
